syntax = "proto3";

package rivet.backend.pkg.user.token_create;

import "legacy/proto/common.proto";
import "legacy/proto/backend/net.proto";

message Request {
	rivet.common.Uuid user_id = 1;
	rivet.backend.net.ClientInfo client = 2;
}

message Response {
	string token = 1;
	string refresh_token = 2;
}
